# delete-itt

./: .env.example  .gitignore  Cargo.toml  README.md
locales/: en.yml
src/: database.rs  handlers.rs  main.rs  storage.rs  types.rs  utils.rs
src/handlers/: filters.rs  mod.rs  settings.rs  setup_poll.rs  utils.rs  vote_no.rs  vote_yes.rs
