[package]
name = "delete-itt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite"] }
teloxide = { version = "0.10.1", features = ["macros", "auto-send", "ctrlc_handler", "cache-me"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
